tests/snapshots/s5_warmup_view__view_complete.snap
---
source: tests/s5_warmup_view.rs
assertion_line: 148
expression: view
---
WarmupView {
    is_warming_up: false,
    elapsed: Some(
        1932s,
    ),
    steps: [
        WarmupStep {
            label: "Postage snapshot loaded",
            state: Done,
            detail: "487 batch(es)",
        },
        WarmupStep {
            label: "Peer bootstrap",
            state: Done,
            detail: "87 connected (target ≥ 50)",
        },
        WarmupStep {
            label: "Kademlia depth stable",
            state: Done,
            detail: "depth 8 (stable across the observation window)",
        },
        WarmupStep {
            label: "Reserve fill",
            state: Done,
            detail: "65536 / 65536 in-radius chunks",
        },
        WarmupStep {
            label: "Stabilization",
            state: Done,
            detail: "Bee reports warmup complete",
        },
    ],
}
