tests/snapshots/s5_warmup_view__view_no_snapshots_loaded.snap
---
source: tests/s5_warmup_view.rs
assertion_line: 90
expression: view
---
WarmupView {
    is_warming_up: false,
    elapsed: None,
    steps: [
        WarmupStep {
            label: "Postage snapshot loaded",
            state: Unknown,
            detail: "(awaiting first /stamps poll)",
        },
        WarmupStep {
            label: "Peer bootstrap",
            state: Unknown,
            detail: "(awaiting first /status poll)",
        },
        WarmupStep {
            label: "Kademlia depth stable",
            state: Unknown,
            detail: "(awaiting first /topology poll)",
        },
        WarmupStep {
            label: "Reserve fill",
            state: Unknown,
            detail: "(awaiting first /status poll)",
        },
        WarmupStep {
            label: "Stabilization",
            state: Unknown,
            detail: "(awaiting first /status poll)",
        },
    ],
}
